load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     # "ocaml_test"
)

package(default_visibility=["//visibility:public"])

ocaml_module(
    name = "Llvm_backend",
    struct = "llvm_backend.ml",
    deps   = [
        # "//src/llvm:Llvm",
        ":backend_c"
    ],
    opts = [
    ],
)

cc_library(
    name = "backend_c",
    srcs = [
        "backend_ocaml.c",
        "@llvm_toolchain_llvm//:include",
    ],
    additional_compiler_inputs = [
        "@llvm_toolchain_llvm//:include",
    ],
    copts = [
        # FIXME: undeclared:
        # 'LLVMInitializeTARGETTargetInfo'
        # 'LLVMInitializeTARGETTarget'
        # "LLVMInitializeTARGETTargetMC"
        "-Wno-implicit-function-declaration",

        "-I$(@toolchains_llvm)/include",
        "-I$(@ocaml)/lib/c",
    ],
    deps = ["@ocaml//lib/c:sdk"],
    visibility = ["//visibility:public"],
    toolchains = ["//:repo_paths"]
)
