load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

package(default_visibility=["//visibility:public"])

ocaml_signature(
    name = "Llvm_bitreader_cmi",
    src = "Llvm_bitreader.mli",
    opts = ["-w", "-unexpected-docstring"], # 50
    deps = ["//src/llvm:Llvm_cmi"]
)


ocaml_module(
    name = "Llvm_bitreader",
    struct = "llvm_bitreader.ml",
    sig    = "Llvm_bitreader_cmi",
    deps   = ["//src/llvm:Llvm",
              ":bitreader_c"],
)

cc_library(
    name = "bitreader_c",
    srcs = [
        "bitreader_ocaml.c",
        "@llvm_toolchain_llvm//:include",
    ],
    copts = [
        "-I$(@toolchains_llvm)/include",
        "-I$(@ocaml)/lib/c",
    ],
    deps = ["@ocaml//lib/c:sdk"],
    visibility = ["//visibility:public"],
    toolchains = ["//:repo_paths"]
)
