load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

package(default_visibility=["//visibility:public"])

ocaml_signature(
    name = "Llvm_debuginfo_cmi",
    src = "llvm_debuginfo.mli",
    # opts = ["-w", "-unexpected-docstring"], # 50
    deps   = ["//src/llvm:Llvm_cmi"]
)

ocaml_module(
    name = "Llvm_debuginfo",
    struct = "llvm_debuginfo.ml",
    sig    = ":Llvm_debuginfo_cmi",
    opts   = ["-w", "-labels-omitted"], # 6
    deps   = ["//src/llvm:Llvm",
              ":debuginfo_c"],
)

cc_library(
    name = "debuginfo_c",
    srcs = [
        "debuginfo_ocaml.c",
        "@llvm_toolchain_llvm//:include",
    ],
    copts = [
        ##FIXME: undeclared fn 'alloc_custom'
        "-Wno-implicit-function-declaration", #FIXME

        "-I$(@toolchains_llvm)/include",
        "-I$(@ocaml)/lib/c",
        "-I$(@)/src/llvm"
    ],
    deps = [
        "@ocaml//lib/c:sdk",
        "//src/llvm:llvm_c"
    ],
    visibility = ["//visibility:public"],
    toolchains = ["//:repo_paths"]
)
