load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

package(default_visibility=["//visibility:public"])

ocaml_signature(
    name = "Llvm_irreader_cmi",
    src = "Llvm_irreader.mli",
    opts = ["-w", "-unexpected-docstring"], # 50
    deps   = ["//src/llvm:Llvm"]
)

ocaml_module(
    name = "Llvm_irreader",
    struct = "llvm_irreader.ml",
    sig    = ":Llvm_irreader_cmi",
    opts   = ["-w", "-labels-omitted"], # 6
    deps   = [
        "//src/llvm:Llvm",
        "//src/target:Llvm_target",
        ":irreader_c"
    ],
)

cc_library(
    name = "irreader_c",
    srcs = [
        "irreader_ocaml.c",
        "@llvm_toolchain_llvm//:include",
    ],
    copts = [
        "-I$(@toolchains_llvm)/include",
        "-I$(@ocaml)/lib/c",
    ],
    deps = ["@ocaml//lib/c:sdk"
    ],
    visibility = ["//visibility:public"],
    toolchains = ["//:repo_paths"]
)
