load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

package(default_visibility=["//visibility:public"])

ocaml_signature(
    name = "Ipo_cmi",
    src = "llvm_ipo.mli",
    deps   = [
        "//llvm/transforms/passmgr_builder:Passmgr_builder",
    ]
)

ocaml_module(
    name = "Ipo",
    struct = "llvm_ipo.ml",
    sig    = "Ipo_cmi",
    deps   = [
        "//llvm/llvm:Llvm",
        "//llvm/target:Target",
    ],
    cc_deps = [":ipo_c"]
)

cc_library(
    name = "ipo_c",
    srcs = [
        "ipo_ocaml.c",
    ],
    additional_compiler_inputs = [
        "@llvm_toolchain_llvm//:include",
    ],
    copts = [
        "-I$(@toolchains_llvm)/include",
        "-I$(@ocaml)/lib/c",
    ],
    deps = [
        "@llvm_toolchain_llvm//include:llvm-c",
        "@ocaml//lib/c:sdk"],
    visibility = ["//visibility:public"],
    toolchains = ["//:repo_paths"]
)
