load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

package(default_visibility=["//visibility:public"])

ocaml_signature(
    name = "Scalar_opts_cmi",
    src  = "llvm_scalar_opts.mli",
    deps = [
        "//lib/transforms/passmgr_builder:Passmgr_builder_cmi",
        "//lib/llvm:Llvm_cmi"
    ]
)

ocaml_module(
    name = "Scalar_opts",
    struct = "llvm_scalar_opts.ml",
    sig    = ":Scalar_opts_cmi",
    # opts   = ["-w", "-labels-omitted"], # 6
    deps   = [
        "//lib/llvm:Llvm",
        "//lib/target:Target",
        ":scalar_opts_c"
    ],
)

cc_library(
    name = "scalar_opts_c",
    srcs = ["scalar_opts_ocaml.c"],
    copts = ["-I$(@llvm_c_sdk)/include",
             "-I$(@ocaml)/lib/sdk",
             "-I$(@)/lib/llvm"],
    deps = ["@llvm_c_sdk//include",
            "@ocaml//lib/sdk",
            "//lib/llvm:llvm_c"],
    visibility = ["//visibility:public"],
    toolchains = ["//:repo_paths"]
)
