load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

package(default_visibility=["//visibility:public"])

ocaml_signature(
    name = "Scalar_opts_cmi",
    src  = "llvm_scalar_opts.mli",
    deps = [
        "//llvm/transforms/passmgr_builder:Passmgr_builder_cmi",
        "//llvm/llvm:Llvm_cmi"
    ]
)

ocaml_module(
    name = "Scalar_opts",
    struct = "llvm_scalar_opts.ml",
    sig    = ":Scalar_opts_cmi",
    # opts   = ["-w", "-labels-omitted"], # 6
    deps   = [
        "//llvm/llvm:Llvm",
        "//llvm/target:Target",
        ":scalar_opts_c"
    ],
)

cc_library(
    name = "scalar_opts_c",
    srcs = ["scalar_opts_ocaml.c"],
    copts = ["-I$(@toolchains_llvm)/include",
             "-I$(@ocaml)/lib/c"],
    deps = ["@llvm_toolchain_llvm//include:llvm-c",
            "@ocaml//lib/c:sdk"],
    visibility = ["//visibility:public"],
    toolchains = ["//:repo_paths"]
)
